# laboris

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  run.sh
app/: app.py
app/database/: db.py
app/models/: user.py
app/routes/: dashboard.py
app/static/css/: login.css  styles.css  welcome.css
app/static/css/components/: entry.css  footer.css  header.css
app/static/css/dashboard/: base.css  navbar.css
app/templates/: landing.html  welcome.html
app/templates/components/: entry.html  header.html
app/templates/dashboard/: base.html  navbar.html
core/assets/images/: Icons.qrc
core/data/: config.json  tos.md  ua.md
time_clock/: Icons_rc.py  app.py
time_clock/pages/: main.ui  main_ui.py
time_clock/pages/translated/: main.py
