[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "laboris"
version = "0.1.0"
description = "A PySide6 application for effect time keeping"
readme = "README.md"
authors = [
  { name = "mek0124", email = "mek0124@proton.me" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
  "Framework :: PySide6",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Time Keeping"
]
dependencies = [
  "PySide6>=6.10.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "time_clock*"]
exclude = ["tests*", "test*"]